Departments Set up Done

--- a/src/Components/Academic-Info/AcademicInfo.css
+++ b/src/Components/Academic-Info/AcademicInfo.css
@@ -1,11 +1,10 @@
-.students-data{
+.departments-data{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    gap: 10px;
-    margin: 10px 100px;
+    gap: 20px;
+    margin: 50px 200px;
 }
-.singleStudent{
-    border: 1.5px solid slateblue;
-    padding: 10px;
-    border-radius: 8px;
+.commonFontWeight{
+    font-weight: bolder;
+    color: slateblue;
 }
