Responsive Part Updated

--- a/src/Components/Academic-Info/AcademicInfo.css
+++ b/src/Components/Academic-Info/AcademicInfo.css
@@ -8,3 +8,10 @@
     font-weight: bolder;
     color: slateblue;
 }
+@media screen and (max-width:576px) {
+    .departments-data{
+        grid-template-columns: repeat(1,1fr);
+        margin: 0;
+        text-align: center;
+    }
+}
