--- a/src/Components/CMTStudents/CMTStudents.css
+++ b/src/Components/CMTStudents/CMTStudents.css
@@ -11,3 +11,12 @@
     margin: 0 auto;
     width: 150px;
 }
+@media screen and (max-width:576px) {
+    .students{
+        grid-template-columns: repeat(1,1fr);
+        text-align: center;
+        margin: 20px auto;
+        text-align: center;
+        max-width: fit-content;
+    }
+}
