--- a/src/Components/CMTStudents/CMTStudents.css
+++ b/src/Components/CMTStudents/CMTStudents.css
@@ -8,7 +8,7 @@
     gap: 20px;
 }
 .btnBack{
-    margin: 0 auto;
+    margin: 20px auto;
     width: 150px;
 }
 @media screen and (max-width:576px) {
